# Scraping-orchestra

./: .gitignore  README.md  app.yaml  commands.sh  master.py  podman-comand.sh  pyproject.toml  requirements.txt  requirementspip.txt  slave.py  utils.py
csv/: sample_jobs copy.csv  sample_jobs.csv
